# WPI-toolchains

./: README.md  build.sh  consts.env  test.sh
.github/workflows/: build.yml  stable.yml  unstable.yml
hosts/: macos_arm64.env  macos_universal.env  macos_x86_64.env  windows_arm64.env
makes/: Makefile
makes/src/: cmake-toolchain.sh  gcc  tree  utils.sh
makes/src/host/: Makefile  clang.sh  lld.sh  llvm.sh  wrapper.sh
patches/: gcc-all_incdir_fix.patch
res/: Dockerfile  build.sh
res/wrapper/: CMakeLists.txt
res/wrapper/include/: infer_target.hpp  path_collection.hpp  sysroot_args.hpp  target_args.hpp
res/wrapper/src/: infer_target.cc  main.cc  path_collection.cc  sysroot_args.cc  target_args.cc  whereami.c
scripts/: codesign.sh  downloads_tools.sh  prep_llvm.sh  repack_tools.sh  repackcli.py
scripts/librepack/: __init__.py  unpack.py
scripts/setup/: collect_build_info.sh  flags.sh  linux.sh  macos.sh  process_args.sh
targets/: ports.txt
targets/bionic/: info.arm64.env  info.armhf.env
targets/bullseye/: info.arm64.env  info.armhf.env
targets/buster/: info.arm64.env  info.armhf.env
targets/focal/: info.arm64.env  info.armhf.env  repack.sh
targets/generic/: download.sh  info.arm64.env  info.armhf.env  repack.sh  version.env
targets/raspi-bullseye/: info.armhf.env
targets/raspi-buster/: info.armhf.env
targets/raspi32/: download.sh  info.armhf.env  repack.sh  version.env
targets/roborio/: download.sh  info.armel.env  repack.sh  version.env
targets/roborio-testing/: download.sh
